feat: Add tests QuotesListSass

--- a/citacoes/package.json
+++ b/citacoes/package.json
@@ -44,6 +44,14 @@
       "last 1 safari version"
     ]
   },
+  "jest": {
+    "watchPathIgnorePatterns": [
+      "mocks"
+    ],
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
+  },
   "devDependencies": {
     "@types/styled-components": "^5.1.26"
   }
