--- a/citacoes/package.json
+++ b/citacoes/package.json
@@ -20,6 +20,14 @@
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
+  "jest": {
+    "watchPathIgnorePatterns": [
+      "mocks"
+    ],
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
